# Neural_Networks_and_Deep_Learning_course_AGH

./: .gitignore  README.md  pyproject.toml
Lab_1/: lab1.ipynb
Lab_2/: lab2.ipynb
Lab_3/: lab3.ipynb
Lab_4/: lab4.ipynb
src/nn_and_dl/Lab_1/: lab1.ipynb
src/nn_and_dl/Lab_10/: lab10.ipynb
src/nn_and_dl/Lab_12/: lab12.ipynb
src/nn_and_dl/Lab_13/: lab13.ipynb
src/nn_and_dl/Lab_14/: zad_tf_nnets_1.ipynb  zad_torch_nnets_1.ipynb
src/nn_and_dl/Lab_4/: lab4.ipynb
src/nn_and_dl/Lab_5/: lab5.ipynb
src/nn_and_dl/Lab_6/: lab6.ipynb
src/nn_and_dl/Lab_8/: lab8.ipynb
