[tool.poetry]
name = "neural-networks-and-deep-learning-course-agh"
version = "0.1.0"
description = ""
authors = ["Szymon Budziak"]
readme = "README.md"
packages = [{ include = "nn_and_dl", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
mnist = "^0.2.2"
seaborn = "^0.13.2"
plotly = "^5.20.0"
chart-studio = "^1.1.0"
ipython = "^8.24.0"

[tool.poetry.group.dev.dependencies]
notebook = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"